--- a/locale/ui_en-us.json
+++ b/locale/ui_en-us.json
@@ -45,9 +45,11 @@
 	"ui_browse_advertise_workshop" : "Click here to search the Workshop in detail!",
 	"ui_browse_no_service_header" : "Steam Services Unavailable",
 	"ui_browse_no_service_body" : "The <b>STEAM</b> Workshop services are currently not available. This is <i>not</i> an error in Wallpaper Engine. Please wait a few hours and try again.<br/><br/>The problem is with the <b>STEAM</b> servers and will be resolved soon.",
+	"ui_browse_no_service_body_use_backup" : "<br/><br/>Wallpaper Engine will now try to show an emergency backup until the company of <b>STEAM (VALVE)</b> has sorted out their issues.",
 	"ui_browse_reload" : "Reload",
 	"ui_browse_clear_filters" : "Clear filters",
-	"ui_browse_variant_filter_notice" : "Browsing variants for: {{title}}",
+	"ui_browse_preset_filter_notice" : "Browsing presets for: {{title}}",
+	"ui_browse_steam_offline_notice" : "<b>STEAM</b> servers are <b>OFFLINE</b>. You are browsing an emergency backup from {{date}}. Please wait a few hours for the company of <b>STEAM (VALVE)</b> to fix the <b>STEAM</b> servers again.",
 	
 	"ui_browse_details_title" : "Title:",
 	"ui_browse_details_author" : "Author:",
@@ -71,12 +73,12 @@
 	"ui_browse_details_properties_save" : "Save",
 	"ui_browse_details_properties_load" : "Load",
 	"ui_browse_details_properties_share_json" : "Share JSON",
-	"ui_browse_details_properties_publish_to_workshop" : "Publish Variant",
-	"ui_browse_details_properties_browse_workshop" : "Browse Variants",
-	"ui_browse_details_properties_variant_hint_header" : "Wallpaper Variants",
-	"ui_browse_details_properties_variant_hint_body" : "A <b>variant</b> includes all of your custom wallpaper settings and any images or videos you may have imported into the wallpaper.<br/><br/>You can share <b>variants</b> on the Steam Workshop just like regular wallpapers, allowing other users to experience the look and feel with the settings you have created. You can also use <b>variants</b> which other users have uploaded.",
-	"ui_browse_details_header_presets" : "Presets",
-	"ui_browse_details_header_variants" : "Variants",
+	"ui_browse_details_properties_preset_publish_to_workshop" : "Publish Preset",
+	"ui_browse_details_properties_preset_browse_workshop" : "Browse Presets ({{count}})",
+	"ui_browse_details_properties_preset_hint_header" : "Wallpaper Presets",
+	"ui_browse_details_properties_preset_hint_body" : "A <b>Workshop preset</b> includes all of your custom wallpaper settings and any images or videos you may have imported into the wallpaper.<br/><br/>You can publish them on the Steam Workshop just like regular wallpapers, allowing other users to experience the look and feel with the settings you have created. You can also download <b>presets</b> which other users have shared.",
+	"ui_browse_details_header_presets" : "Your Presets",
+	"ui_browse_details_header_workshop" : "Workshop Presets",
 	
 	"ui_browse_footer_btn_workshop" : "Steam Workshop",
 	"ui_browse_footer_btn_store" : "Steam Store",
@@ -127,7 +129,7 @@
 	
 	"ui_browse_search_placeholder" : "Search",
 	"ui_browse_filter_category_wallpaper" : "Wallpaper",
-	"ui_browse_filter_category_variant" : "Variant",
+	"ui_browse_filter_category_preset" : "Preset",
 	"ui_browse_filter_type_any" : "Any",
 	"ui_browse_filter_type_scene" : "Scene",
 	"ui_browse_filter_type_video" : "Video",
@@ -146,10 +148,10 @@
 	"ui_browse_modal_unsubscribe_body" : "Are you sure that you want to unsubscribe from: <b>{{title}}</b>?<br/><br/>After unsubscribing, Steam will delete the wallpaper files automatically after the wallpaper browse window is closed. Steam delays the deletion of wallpapers until you close the wallpaper browse window.",
 	"ui_browse_modal_remove_local_header" : "Remove from History",
 	"ui_browse_modal_remove_local_body" : "Are you sure that you want to remove the local wallpaper: <b>{{title}}</b>?",
-	"ui_browse_modal_remove_variant_info" : "<br/><br/>The following wallpapers are depending on the wallpaper(s) you are trying to unsubscribe and will be removed as well: <b>{{variants}}</b>",
-	"ui_browse_modal_subscribe_variant_header" : "Subscribing to Wallpaper Dependency",
-	"ui_browse_modal_subscribe_variant_body" : "The wallpaper <b>{{title}}</b> is a variant of another wallpaper which you need to subscribe to as well to use it.<br/><br/>Subscribe to both now?",
-	"ui_browse_modal_subscribe_variant_open_dependency" : "Open Dependency",
+	"ui_browse_modal_remove_preset_info" : "<br/><br/>The following presets are depending on the wallpaper(s) you are trying to unsubscribe and will be removed as well: <b>{{presets}}</b>",
+	"ui_browse_modal_subscribe_preset_header" : "Subscribing to Wallpaper Preset",
+	"ui_browse_modal_subscribe_preset_body" : "The wallpaper <b>{{title}}</b> is a preset for another wallpaper which you need to subscribe to as well to use it.<br/><br/>Subscribe to both now?",
+	"ui_browse_modal_subscribe_preset_open_dependency" : "Open Dependency",
 	"ui_browse_open_url_header" : "Open Wallpaper from URL",
 	"ui_browse_modal_proceed" : "Proceed",
 	"ui_browse_modal_advertise_workshop_header" : "In-App Workshop Browser",
@@ -198,8 +200,8 @@
 	"ui_browse_profiles_modal_save_name" : "Name", 
 	"ui_browse_profiles_modal_save_description" : "If a profile with the same name exists already, it will be overwritten.",
 	
-	"ui_browse_preset_modal_save_header" : "Save Preset",
-	"ui_browse_preset_modal_open_header" : "Load Preset",
+	"ui_browse_preset_modal_save_header" : "Save Local Preset",
+	"ui_browse_preset_modal_open_header" : "Load Local Preset",
 	"ui_browse_preset_modal_share_header" : "Share Preset",
 	"ui_browse_preset_modal_save_description" : "If a preset with the same name exists already, it will be overwritten.",
 	"ui_browse_preset_modal_save_name" : "Name",
@@ -578,7 +580,7 @@
 
 	"ui_editor_camera_add_path" : "Add path",
 	"ui_editor_camera_select_path" : "Please select a path on the left.",
-	"ui_editor_camera_add_renderable" : "Add Preset",
+	"ui_editor_camera_add_renderable" : "Add Asset",
 	"ui_editor_gizmo_translate" : "Translate",
 	"ui_editor_gizmo_rotate" : "Rotate",
 	"ui_editor_gizmo_scale" : "Scale",
@@ -801,7 +803,7 @@
 	"ui_editor_effects_modal_group_colorize" : "Colorize",
 	"ui_editor_effects_modal_group_distort" : "Distort",
 	"ui_editor_effects_modal_group_enhance" : "Enhance",
-	"ui_editor_effects_modal_title_add_renderable" : "Add Renderable",
+	"ui_editor_effects_modal_title_add_renderable" : "Add Asset",
 	"ui_editor_effects_modal_title_add_effect" : "Add Effect",
 	
 	"ui_editor_effect_blend_title" : "Blend",
@@ -936,11 +938,11 @@
 	"ui_editor_properties_audio_response" : "Audio response",
 	"ui_editor_properties_axis" : "Axis",
 	"ui_editor_properties_background" : "Background",
-	"ui_editor_properties_blend_in_end" : "Blend in end",
-	"ui_editor_properties_blend_in_start" : "Blend in start",
+	"ui_editor_properties_blend_in_end" : "Blend-in end",
+	"ui_editor_properties_blend_in_start" : "Blend-in start",
 	"ui_editor_properties_blend_mode" : "Blend mode",
-	"ui_editor_properties_blend_out_end" : "Blend out end",
-	"ui_editor_properties_blend_out_start" : "Blend out start",
+	"ui_editor_properties_blend_out_end" : "Blend-out end",
+	"ui_editor_properties_blend_out_start" : "Blend-out start",
 	"ui_editor_properties_blend_texture" : "Blend texture",
 	"ui_editor_properties_blending" : "Blending",
 	"ui_editor_properties_blur_scale" : "Blur scale",
@@ -994,8 +996,8 @@
 	"ui_editor_properties_event_spawn" : "Event spawn",
 	"ui_editor_properties_exponent" : "Exponent",
 	"ui_editor_properties_export" : "Export",
-	"ui_editor_properties_fade_in_time" : "Fade in time",
-	"ui_editor_properties_fade_out_time" : "Fade out time",
+	"ui_editor_properties_fade_in_time" : "Fade-in time",
+	"ui_editor_properties_fade_out_time" : "Fade-out time",
 	"ui_editor_properties_feather" : "Feather",
 	"ui_editor_properties_file" : "File",
 	"ui_editor_properties_files" : "Files",
